--- a/mirko/index.html
+++ b/mirko/index.html
@@ -41,7 +41,11 @@
             <!-- <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.svg" alt="alternative"></a> -->
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
-            <a class="navbar-brand logo-text" href="index.html">Déficit Digital</a>
+            
+                <a class="navbar-brand logo-text" href="index.html">
+                    <img src="defict.png" class="Descrição da imagem" width="150" height="150"> 
+                </a>
+            </a>
 
             <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -127,8 +131,7 @@
         <div class="container" >
             <div class="row d-flex align-items-center">
                 <div class="col-lg-7" data-aos="fade-right">
-                    <p>ABOUT US</p>
-                    <h1>We are top internet <br> service company</h1>
+                    <h1>Sobre Nós</h1>
                     <p class="py-2 para-light">A Déficit Digital revolucionou a busca de emprego para pessoas com deficiência (PCD) ao promover a inclusão e igualdade no mercado de trabalho. Ele conectou PCD talentosos a empregadores dispostos a fazer adaptações para acomodar suas necessidades. O site se expandiu para oferecer cursos de treinamento em acessibilidade e orientação para empregadores. A iniciativa transformou a mentalidade da sociedade, tornando a inclusão a norma e a busca de emprego para PCD mais acessível do que nunca.</p>
 
                     <div class="my-3">
